# table_functional_tester

./: Cargo.toml  build.rs  config.json
.github/workflows/: build.yml
src/: config_generator.rs  generated_assets.rs  main.rs  test_config.rs  test_runner.rs
testapi/: config.json  initid.js  query.js  test.js
testcases/: config.json
testcases/checkbox/: checkboxvaluechange.js  defaultvaluecheck.js  defaultvisiblesection.js
testcases/colspan/: addrowsuccesscolspan2.js  addrowsuccesswithoutcolspan.js
testcases/dropdown/: changetoempty.js  defaultselectedandshow.js  defaultvisiblenothing.js
testcases/rowspan/: adddoublerow.js  addsimplerow.js  faildoublerow4.js  faildoublerow5.js
testcases/validationcolspan/: formvalidationmissall.js  formvalidationmissfirst.js  formvalidationmisssecond.js  formvalidationmissthird.js  formvalidationonlyfirst.js  formvalidationonlysecond.js  formvalidationonlythird.js  validationmessageclearaftersuccess.js
testcases/validationrowspan/: formvalidationmissall.js  formvalidationmissfirst.js  formvalidationmisssecond.js  formvalidationmissthird.js  formvalidationonlyfirst.js  formvalidationonlysecond.js  formvalidationonlythird.js  validationmessageclearaftersuccess.js
