[package]
name = "table_functional_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
failure = "0.1.8"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
include_dir = "0.7.4"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.145"
